// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails rendering render with error Props 1`] = `
<MessageBox
  icontype="error-circle-o"
  key="task-details-error"
  msg="Could not receive data: some-error"
/>
`;

exports[`TaskDetails rendering render with loading Props 1`] = `
<div
  className="task-details-react well"
>
  <ForwardRef
    animation={false}
    defaultActiveKey={1}
    id="task-details-tabs"
  >
    <Tab
      eventKey={1}
      title="Task"
    >
      <TaskSkeleton />
    </Tab>
    <Tab
      disabled={true}
      eventKey={2}
      title="Running Steps"
    >
      <RunningSteps
        cancelStep={[MockFunction]}
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        runningSteps={Array []}
        taskReload={false}
        taskReloadStart={[MockFunction]}
      />
    </Tab>
    <Tab
      disabled={true}
      eventKey={3}
      title="Errors"
    >
      <Errors
        executionPlan={Object {}}
        failedSteps={Array []}
      />
    </Tab>
    <Tab
      disabled={true}
      eventKey={4}
      title="Locks"
    >
      <Locks
        locks={Array []}
      />
    </Tab>
    <Tab
      disabled={true}
      eventKey={5}
      title="Raw"
    >
      <Raw
        endedAt=""
        externalId=""
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        input={Array []}
        label=""
        output={Object {}}
        startedAt=""
      />
    </Tab>
  </ForwardRef>
</div>
`;

exports[`TaskDetails rendering render with min Props 1`] = `
<div
  className="task-details-react well"
>
  <ForwardRef
    animation={false}
    defaultActiveKey={1}
    id="task-details-tabs"
  >
    <Tab
      eventKey={1}
      title="Task"
    >
      <Task
        action=""
        canEdit={false}
        cancelTaskRequest={[Function]}
        cancellable={false}
        dynflowEnableConsole={false}
        endedAt=""
        errors={Array []}
        externalId=""
        hasSubTasks={false}
        help=""
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        input={Array []}
        label=""
        output={Object {}}
        parentTask=""
        progress={0}
        result="error"
        resumable={false}
        resumeTaskRequest={[Function]}
        startAt=""
        startBefore=""
        startedAt=""
        state=""
        status="RESOLVED"
        taskProgressToggle={[Function]}
        taskReload={false}
        taskReloadStart={[MockFunction]}
        username=""
        usernamePath=""
      />
    </Tab>
    <Tab
      eventKey={2}
      title="Running Steps"
    >
      <RunningSteps
        cancelStep={[MockFunction]}
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        runningSteps={Array []}
        taskReload={false}
        taskReloadStart={[MockFunction]}
      />
    </Tab>
    <Tab
      eventKey={3}
      title="Errors"
    >
      <Errors
        executionPlan={Object {}}
        failedSteps={Array []}
      />
    </Tab>
    <Tab
      eventKey={4}
      title="Locks"
    >
      <Locks
        locks={Array []}
      />
    </Tab>
    <Tab
      eventKey={5}
      title="Raw"
    >
      <Raw
        endedAt=""
        externalId=""
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        input={Array []}
        label=""
        output={Object {}}
        startedAt=""
      />
    </Tab>
  </ForwardRef>
</div>
`;
